--- a/dashboard.html
+++ b/dashboard.html
@@ -509,8 +509,9 @@
     </div>
 
     <script type="module">
-        import './training-background.js';
-    import './competition-background.js';
+        // Background scripts uitgeschakeld vanwege CORS fouten
+    // import './training-background.js';
+    // import './competition-background.js';
         
         // Supabase configuratie met token check
         const supabaseUrl = 'https://ltwolxjbmdopjslnlkx.supabase.co';
