--- a/training.html
+++ b/training.html
@@ -840,7 +840,8 @@
     // Supabase client import
     import { createClient } from 'https://cdn.jsdelivr.net/npm/@supabase/supabase-js/+esm';
     import './weather.js';
-    import './training-background.js';
+    // Background scripts uitgeschakeld vanwege CORS fouten
+    // import './training-background.js';
     
             // Check authenticatie
         const isAuthenticated = localStorage.getItem('user_authenticated');
