--- a/wedstrijden.html
+++ b/wedstrijden.html
@@ -144,7 +144,8 @@
   `n<script type="module">
     
     import './weather.js';
-    import './competition-background.js';
+    // Background scripts uitgeschakeld vanwege CORS fouten
+    // import './competition-background.js';
     
     function updateClock() {
       const now = new Date();
