--- a/duiventil.html
+++ b/duiventil.html
@@ -2,8 +2,8 @@
 <html lang="nl">
 <head>
   <meta charset="UTF-8" />
-      <title>ðŸ¦… Pigeon Legends - Duiventil Beheer ðŸ </title>
-      <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>ðŸ¦…</text></svg>">
+      <title>Pigeon Legends - Duiventil Beheer</title>
+      <link rel="icon" type="image/png" href="Duif1.png">
       <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
   <style>
@@ -532,8 +532,9 @@
 
   `n<script type="module">
     import { createClient } from 'https://cdn.jsdelivr.net/npm/@supabase/supabase-js/+esm';
-    import './training-background.js';
-    import './competition-background.js';
+    // Background scripts uitgeschakeld vanwege CORS fouten
+    // import './training-background.js';
+    // import './competition-background.js';
     
     // Check authenticatie
 const isAuthenticated = localStorage.getItem('user_authenticated');
